# agentic-ai-architectures

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  agent.py  gateway.py  llm.py  planner.py
examples/ch01_hello_multimodel/: README.md  main.py
examples/ch02_base_agent/: .env.example  README.md  main.py
examples/ch03_tool_registry/: README.md  main.py
examples/ch04_router/: README.md  main.py
examples/ch05_sessions/: README.md  main.py
examples/ch06_rag_complete/: README.md  main.py
examples/ch07_planner/: README.md  main.py
examples/ch08_gateway/: README.md  main.py
examples/ch09_safety/: README.md  main.py
examples/ch10_full_framework/: README.md  main.py
knowledge/: memory_service.py  rag.py
monitoring/: safety.py  telemetry.py
orchestration/: orchestrator.py  router.py  workflows.py
storage/: session.py
tests/: conftest.py
tests/ch01/: test_placeholder.py
tests/ch02/: test_placeholder.py
tests/ch03/: test_placeholder.py
tests/ch04/: test_placeholder.py
tests/ch05/: test_placeholder.py
tests/ch06/: test_placeholder.py
tests/ch07/: test_placeholder.py
tests/ch08/: test_gateway.py  test_placeholder.py
tests/ch09/: test_placeholder.py  test_safety.py  test_telemetry.py
tests/ch10/: test_orchestrator.py  test_placeholder.py
tools/: mcp_connector.py  registry.py
