[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "agnostic-agent-framework"
version         = "1.0.0"
description     = "A provider-agnostic agentic AI framework — companion to 'The Agentic Spine'"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
authors         = [{ name = "The Agentic Spine" }]
keywords        = ["agentic-ai", "llm", "agent-framework", "multi-agent", "rag", "guardrails"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

# Minimal base: no LLM provider, no vector DB, no Redis.
# Works fully against MockLlmProvider for testing.
dependencies = [
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
openai     = ["openai>=1.30.0"]
anthropic  = ["anthropic>=0.25.0"]
google     = ["google-generativeai>=0.7.0"]

rag        = [
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
]
redis      = ["redis[asyncio]>=5.0.0"]
postgres   = ["asyncpg>=0.29.0"]
telemetry  = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]
prometheus = ["prometheus-client>=0.20.0"]

all = [
    "agnostic-agent-framework[openai,anthropic,google]",
    "agnostic-agent-framework[rag,redis,postgres]",
    "agnostic-agent-framework[telemetry,prometheus]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage      = "https://github.com/venugangad/agentic-ai-architectures"
Documentation = "https://venugangad.github.io/agentic-ai-architectures"
Repository    = "https://github.com/venugangad/agentic-ai-architectures"
Issues        = "https://github.com/venugangad/agentic-ai-architectures/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["core*", "tools*", "storage*", "knowledge*", "orchestration*", "monitoring*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=. --cov-report=term-missing"

[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "I", "UP", "B", "SIM"]
ignore         = ["E501"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
